@@ -126,6 +126,7 @@ IvanBarsukov
 j-xella
 J. Reis
 Jakob Helmecke
+James Dietrich
 Janek (xeruf)
 Jason Dreisbach (jtdreisb)
 Jason W. Ryan
